force-app/main/default/objects/Home_Services__c/fields/Greater_Than_90_Days_Less_Than_14_Days__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than_90_Days_Less_Than_14_Days__c</fullName>
    <formula>IF( AND((Appointment_Date__c &gt; (TODAY() - 14)), (Appointment_Date__c &lt;= (TODAY()+90))),&quot;1&quot;,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Today - 14) to (Today + 90)</label>
    <type>Text</type>
</CustomField>