force-app/main/default/objects/Home_Services__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>Net_Sales_Price__c - Installation__r.Total_COGS_and_Labor__c -  G_A_Allocation__c -  TM_Allocation__c -   Total_Other_Cost_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>