force-app/main/default/objects/Home_Services__c/fields/Hardness_gpg__c.field-meta.xml
<CustomField>
    <fullName>Hardness_gpg__c</fullName>
    <label>Hardness gpg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>