force-app/main/default/objects/Home_Services__c/fields/History_Reschedule_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>History_Reschedule_Call_Notes__c</fullName>
    <label>History Reschedule Call Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>