force-app/main/default/objects/Home_Services__c/fields/HOA_Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>HOA_Approval_Requested__c</fullName>
    <label>HOA Approval Requested</label>
    <type>Date</type>
</CustomField>