force-app/main/default/objects/Home_Services__c/fields/hoaName__c.field-meta.xml
<CustomField>
    <fullName>hoaName__c</fullName>
    <label>Hoa Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>