force-app/main/default/objects/Home_Services__c/fields/hoaPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>hoaPhoneNumber__c</fullName>
    <label>Hoa Phone Number</label>
    <type>Phone</type>
</CustomField>