force-app/main/default/objects/Home_Services__c/fields/Home_Services_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Services_Status__c</fullName>
    <label>Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Bid Submitted</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Rehash</fullName>
            </value>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Won/Canceled</fullName>
            </value>
            <value>
                <fullName>Closed Won / Service Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>