force-app/main/default/objects/Home_Services__c/fields/Homeowner_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_Email__c</fullName>
    <formula>Account__r.Homeowner_2_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homeowner #2 Email</label>
    <type>Text</type>
</CustomField>