force-app/main/default/objects/Home_Services__c/fields/Homeowner_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_Name__c</fullName>
    <formula>Account__r.Homeowner_2_First_Name__c + &quot; &quot;+  Account__r.Homeowner_2_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homeowner #2 Name</label>
    <type>Text</type>
</CustomField>