force-app/main/default/objects/Home_Services__c/fields/Homeowner_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_2_Phone__c</fullName>
    <formula>Account__r.Homeowner_2_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homeowner #2 Phone</label>
    <type>Text</type>
</CustomField>