force-app/main/default/objects/Home_Services__c/fields/House_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>House_Square_Footage__c</fullName>
    <label>House Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>