force-app/main/default/objects/Home_Services__c/fields/House_Square_Footage_Text__c.field-meta.xml
<CustomField>
    <fullName>House_Square_Footage_Text__c</fullName>
    <label>House Square Footage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>