force-app/main/default/objects/Home_Services__c/fields/Hyd_Supl_ppm__c.field-meta.xml
<CustomField>
    <fullName>Hyd_Supl_ppm__c</fullName>
    <label>Hyd.Supl. ppm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>