force-app/main/default/objects/Home_Services__c/fields/In_house__c.field-meta.xml
<CustomField>
    <fullName>In_house__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In house?</label>
    <type>Checkbox</type>
</CustomField>