force-app/main/default/objects/Home_Services__c/fields/In_House_Financing__c.field-meta.xml
<CustomField>
    <fullName>In_House_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-House Financing</label>
    <type>Checkbox</type>
</CustomField>