force-app/main/default/objects/Home_Services__c/fields/Industry_Sales_formula__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sales_formula__c</fullName>
    <formula>IF(
CONTAINS( RecordType.Name , &quot;Home Automation&quot; ), &quot;Security and Home Automation&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Solar&quot; ), &quot;Solar Energy&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Water&quot; ), &quot;Water and Air Purification&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Remodel&quot; ), &quot;Home Improvement&quot;,
IF(
CONTAINS(RecordType.Name, &quot;Pest Control&quot; ), &quot;Pest Control&quot;,
RecordType.Name)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry-Sales formula</label>
    <type>Text</type>
</CustomField>