force-app/main/default/objects/Home_Services__c/fields/Install_Fee__c.field-meta.xml
<CustomField>
    <fullName>Install_Fee__c</fullName>
    <label>Install Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>