force-app/main/default/objects/Home_Services__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipLabel>Home Service</relationshipLabel>
    <relationshipName>Home_Service</relationshipName>
    <type>Lookup</type>
</CustomField>