force-app/main/default/objects/Home_Services__c/fields/Installation_Company__c.field-meta.xml
<CustomField>
    <fullName>Installation_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The lookup Account must be  checked with &apos;Installation Company&apos; field.</errorMessage>
        <filterItems>
            <field>Account.Installation_Company__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Home Services (Installation Company)</relationshipLabel>
    <relationshipName>Home_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>