force-app/main/default/objects/Home_Services__c/fields/Installation_Event__c.field-meta.xml
<CustomField>
    <fullName>Installation_Event__c</fullName>
    <label>Installation Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>