force-app/main/default/objects/Home_Services__c/fields/Installation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_Date__c</fullName>
    <formula>Installation__r.Appt_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Start Date</label>
    <type>DateTime</type>
</CustomField>