force-app/main/default/objects/Home_Services__c/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
                <default>true</default>
                <label>Sale</label>
            </value>
            <value>
                <fullName>Pre Installation</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Post Installation</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Presubmission</fullName>
            </value>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>Glass Install</fullName>
            </value>
            <value>
                <fullName>Battery Install</fullName>
            </value>
            <value>
                <fullName>AHJ Inspection</fullName>
            </value>
            <value>
                <fullName>Utility Inspection</fullName>
            </value>
            <value>
                <fullName>QC Call</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Certificate of Completion</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>