force-app/main/default/objects/Home_Services__c/fields/Installation_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status_Formula__c</fullName>
    <formula>TEXT(Installation__r.Installation_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Status</label>
    <type>Text</type>
</CustomField>