force-app/main/default/objects/Home_Services__c/fields/Iron_Algae__c.field-meta.xml
<CustomField>
    <fullName>Iron_Algae__c</fullName>
    <label>Iron Algae</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>