force-app/main/default/objects/Home_Services__c/fields/Iron_ppm__c.field-meta.xml
<CustomField>
    <fullName>Iron_ppm__c</fullName>
    <label>Iron ppm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>