force-app/main/default/objects/Home_Services__c/fields/Kept_Locked__c.field-meta.xml
<CustomField>
    <fullName>Kept_Locked__c</fullName>
    <label>Kept Locked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>