force-app/main/default/objects/Home_Services__c/fields/Kinds_Of_Pets__c.field-meta.xml
<CustomField>
    <fullName>Kinds_Of_Pets__c</fullName>
    <label>Kinds Of Pets</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pets__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Dog(s)</fullName>
            </value>
            <value>
                <fullName>Cat(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>