force-app/main/default/objects/Home_Services__c/fields/Kitchen_Bath_Sales_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Bath_Sales_Appointment_Type__c</fullName>
    <label>Kitchen &amp; Bath Sales Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>