force-app/main/default/objects/Home_Services__c/fields/Kunnect_Profile__c.field-meta.xml
<CustomField>
    <fullName>Kunnect_Profile__c</fullName>
    <label>Kunnect Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>