force-app/main/default/objects/Home_Services__c/fields/last4numbers__c.field-meta.xml
<CustomField>
    <fullName>last4numbers__c</fullName>
    <label>last 4 numbers</label>
    <length>4</length>
    <type>Text</type>
</CustomField>