force-app/main/default/objects/Home_Services__c/fields/Lead_Review__c.field-meta.xml
<CustomField>
    <fullName>Lead_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Review</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Home Services (Lead Review)</relationshipLabel>
    <relationshipName>Home_Services_LeadReview</relationshipName>
    <type>Lookup</type>
</CustomField>