force-app/main/default/objects/Home_Services__c/fields/Mobile_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Contact</label>
    <type>Checkbox</type>
</CustomField>