force-app/main/default/objects/Home_Services__c/fields/Monthly_Security_Services__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Security_Services__c</fullName>
    <label>Monthly Security Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Alarm Signal Verification</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>