force-app/main/default/objects/Home_Services__c/fields/Months_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Months_Remaining__c</fullName>
    <label>Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>