force-app/main/default/objects/Home_Services__c/fields/Name_On_Card_Service__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Card_Service__c</fullName>
    <label>Name On Card.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>