force-app/main/default/objects/Home_Services__c/fields/Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>Naming_Convention__c</fullName>
    <formula>First_Name__c + &quot; &quot; + Last_Name__c  + &quot; - &quot; +   RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Naming Convention</label>
    <type>Text</type>
</CustomField>