force-app/main/default/objects/Home_Services__c/fields/Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit__c</fullName>
    <formula>Total_Net_Profit__c  /  Total_Gross_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>