force-app/main/default/objects/Home_Services__c/fields/Net_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales_Price__c</fullName>
    <formula>Total_Cash_Selling_Price__c  - Sales_Tax_Total__c  - Dealer_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>