force-app/main/default/objects/Home_Services__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <label>Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>TMobile</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>