force-app/main/default/objects/Home_Services__c/fields/No_Reg__c.field-meta.xml
<CustomField>
    <fullName>No_Reg__c</fullName>
    <label>No Reg.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>