force-app/main/default/objects/Home_Services__c/fields/Number_of_payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_payments__c</fullName>
    <label>Number of payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>