force-app/main/default/objects/Home_Services__c/fields/of_people_with_their_own_cell_phone__c.field-meta.xml
<CustomField>
    <fullName>of_people_with_their_own_cell_phone__c</fullName>
    <label># of people with their own cell phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>