force-app/main/default/objects/Home_Services__c/fields/Other_Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Allocation__c</fullName>
    <formula>Net_Sales_Price__c  * Cost_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Cost Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>