force-app/main/default/objects/Home_Services__c/fields/Package_Name_FINANCE__c.field-meta.xml
<CustomField>
    <fullName>Package_Name_FINANCE__c</fullName>
    <label>Package Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>