force-app/main/default/objects/Home_Services__c/fields/Paint_Or_Stained__c.field-meta.xml
<CustomField>
    <fullName>Paint_Or_Stained__c</fullName>
    <label>Paint Or Stained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Stained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>